Add krazune namespace

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=Krazune
 support=
 description=Shows the player's line of sight.
 tags=line,sight,tiles,markers
-plugins=com.lineofsight.LineOfSightPlugin
+plugins=com.krazune.lineofsight.LineOfSightPlugin
