--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
 
-group = 'com.lineofsight'
+group = 'com.krazune'
 version = '2021.11.1'
 sourceCompatibility = '1.8'
 
