Correct name capitalization

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Line of Sight
-author=Krazune
+author=krazune
 support=
 description=Shows the player's line of sight.
 tags=line,sight,tiles,markers
