--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Line of Sight
 author=krazune
 support=
 description=Shows the player's line of sight.
-tags=line,sight,tiles,markers
+tags=line,sight,tiles,markers,range
 plugins=com.krazune.lineofsight.LineOfSightPlugin
